Converted open list to set and closed list to array
- Also restructured node class slightly
- Still need to redo how node calculates costs

--- a/AStar/AStar.vcxproj.filters
+++ b/AStar/AStar.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="priorityQueue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="node.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="application.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="priorityQueue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
